fix styling on mobile that was lost somehow

--- a/app/assets/stylesheets/_refer.scss
+++ b/app/assets/stylesheets/_refer.scss
@@ -261,9 +261,7 @@
       }
 
       .hero-headline {
-        @media only screen and (min-width: $desktop) {
-          width: 428px;
-        }
+        max-width: 428px;
       }
     }
     .copy-link-wrapper {
